Fixed an issue with the 100% container, added default collapsed class to collapsed links

--- a/style.css
+++ b/style.css
@@ -11,3 +11,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html http://www.apache.org/lice
 */
 
 /* HEADS UP: Everything that you will normally find here can be found in the library/less/wp.less */
+.container-full {
+  overflow: hidden;
+}
